contact mint for key and balance

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ __pycache__/nutzap_utils.cpython-311.pyc
 .env
 .env
 __pycache__/nut_wallet_utils.cpython-311.pyc
+__pycache__/cashu_utils.cpython-311.pyc
+db/Cashu/wallet.sqlite3
