--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ executing==2.0.1
 ffmpeg==1.4
 ffmpegio==0.9.1
 ffmpegio-core==0.10.0
-idna==3.6
+idna==3.7
 imageio==2.33.1
 imageio-ffmpeg==0.4.9
 instaloader==4.10.1
@@ -74,3 +74,5 @@ wcwidth==0.2.13
 websockets==12.0
 yt-dlp==2024.5.27
 zipp==3.17.0
+cashu~=0.16.0
+httpx~=0.25.2
