--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ __pycache__/nutzap_utils.cpython-311.pyc
 __pycache__/nut_wallet_utils.cpython-311.pyc
 __pycache__/cashu_utils.cpython-311.pyc
 db/Cashu/wallet.sqlite3
+db/CashuReceiver/wallet.sqlite3
+db/Receiver/wallet.sqlite3
